--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica:400i" rel="stylesheet">
   </head>
   <body>
+    
     <div class="top">
     <header>
       <h1>Victor Nwaogu</h1>
@@ -42,8 +43,10 @@
       <p>@socialhandle<p>
     </div>
         </section>
+        <img src="Shape.png" width="150px" height="150px">
     </div>
-    <img src="Shape.png" width="150px" height="150px">
-    
+    <footer>
+      @2019
+    </footer>  
   </body>  
 </html>  
