--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </section>
         <img src="Shape.png" width="150px" height="150px">
     </div>
+        <img src="Shape.png" width="150px" height="150px">
     <footer>
       @2019
     </footer>  
