--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica:400i" rel="stylesheet">
   </head>
   <body>
-    
-    <div class="top">
+    <div class="resume">
+    <div class="top">  
     <header>
       <h1>Victor Nwaogu</h1>
     </header>
@@ -45,7 +45,7 @@
         </section>
         <img src="Shape.png" width="150px" height="150px">
     </div>
-        <img src="Shape.png" width="150px" height="150px">
+    </div>  
     <footer>
       @2019
     </footer>  
