--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <img src="Shape.png" width="150px" height="150px">        
     </div> 
   
-    <footer>
-      <p>@2019</p>
-    </footer>  
   </body>  
+      <foot>
+      <p>@2019</p>
+    </foot> 
 </html>  
